# GP2-SMADIMO

./: GP 2 - Scraping & API.ipynb  GP_2_Визуализации и аналитика.ipynb  README.md
api_parser/: bearer_token.json  master.py  pyproject.toml
api_parser/data/: config.py
api_parser/developers/fsk/banks/banks/: banks.csv  banks.py
api_parser/developers/fsk/banks/mortage/: mortage.csv  mortage.json  mortage.py
api_parser/developers/fsk/banks/programs/: programs.csv  programs.py
api_parser/developers/fsk/basics/: mortage_parser.py
api_parser/developers/fsk/basics/data/: banks.csv  mortgage.csv
api_parser/developers/fsk/cities/: cities.csv  cities.json  cities.py
api_parser/developers/fsk/flats/: flats.py  flats_new.py
api_parser/developers/fsk/progress/: progress.py
api_parser/developers/fsk/projects/: projects.csv  projects.json  projects.py  projects_expanded.csv
api_parser/developers/fsk/projects_with_duplicates/: projects.py  projects_final.py
api_parser/developers/samolet/: parser.py
api_parser/models/: __init__.py  base.py  building.py  price.py
api_parser/models/additionals/: __init__.py  flat_class.py  flat_type.py  region.py
api_parser/utils/: __init__.py  logging.py  parsing.py
archive/scraping_v0/: main.py  requirements.txt
scraping/: card_parser.py  driver.py  links.csv  logger_config.py  main.ipynb  page_parser.py  parser_1.py  requirements.txt  scraper.py  sector_0.csv  sector_1.csv  sector_2.csv  sector_3.csv  sector_4.csv  sector_5.csv
